--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-  <base href="/">
   <meta charset="utf-8">
   <title>PERRINN</title>
   <base href="/">
@@ -10,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
 </body>
 </html>
